--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -14,9 +14,14 @@
 
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <section>
+            <div id="phonesContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
+            </div>
+        </section>
+    </main>
     <footer></footer>
-    
+
     <script src="./js/phone.js"></script>
 </body>
 
