--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <body>
     <header></header>
     <main>
+        <section>
+            <h2 class="text-xl text-center font-bold underline">Gofur's Shop</h2>
+            <div id="phoneContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
+            </div>
+        </section>
     </main>
     <footer></footer>
 
