--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
             <button onclick="handleSearch2()" class="btn glass bg-sky-900 text-white">Search</button>
         </section>
         <section>
+            <!-- Loading -->
+            <div id="loadingBall" class="text-center mt-20 hidden">
+                <span class="loading loading-ball loading-lg"></span>
+            </div>
             <!-- Result Section -->
             <div id="phoneContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4">
             </div>
             <!-- Show All button -->
-            <div id="show-all-container" class="hidden text-center">
+            <div id="show-all-container" class="hidden text-center mt-4">
                 <button onclick="" class="btn glass bg-teal-800  text-white">Show all</button>
             </div>
         </section>
