--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <main class="container mx-auto">
         <section class="bg-gray-200 p-4 mt-4">
             <!-- Search section -->
-            <input id="search-field" type="text" placeholder="Search..." class="input input-bordered w-full max-w-xs bg-gray-700 text-white" />
+            <input id="search-field" type="text" placeholder="Search..."
+                class="input input-bordered w-full max-w-xs bg-gray-700 text-white" />
             <button onclick="handleSearch()" class="btn glass bg-gray-700 text-white">Search</button>
-            <!-- Another Search field -->
+            <!-- Another Search field
             <input id="search-field2" type="text" placeholder="Search..." class="input input-bordered w-full max-w-xs bg-gray-700 text-white" />
-            <button onclick="handleSearch2()" class="btn glass bg-sky-900 text-white">Search</button>
+            <button onclick="handleSearch2()" class="btn glass bg-sky-900 text-white">Search</button> -->
         </section>
         <section>
             <!-- Loading -->
@@ -35,7 +36,24 @@
             </div>
             <!-- Show All button -->
             <div id="show-all-container" class="hidden text-center mt-4">
-                <button onclick="" class="btn glass bg-teal-800  text-white">Show all</button>
+                <button onclick="handleShowAll()" class="btn glass bg-teal-800  text-white">Show all</button>
+            </div>
+            <!-- Modal -->
+            <!-- Open the modal using ID.showModal() method -->
+            <div>
+                <button class="btn" onclick="show_details_modal.showModal()">open modal</button>
+                <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+                    <div class="modal-box">
+                        <h3 class="font-bold text-lg">Hello!</h3>
+                        <p class="py-4">Press ESC key or click the button below to close</p>
+                        <div class="modal-action">
+                            <form method="dialog">
+                                <!-- if there is a button in form, it will close the modal -->
+                                <button class="btn">Close</button>
+                            </form>
+                        </div>
+                    </div>
+                </dialog>
             </div>
         </section>
     </main>
