--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
             <!-- Modal -->
             <!-- Open the modal using ID.showModal() method -->
             <div>
-                <button class="btn" onclick="show_details_modal.showModal()">open modal</button>
+                <!-- <button class="btn" onclick="show_details_modal.showModal()">open modal</button> -->
                 <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
                     <div class="modal-box">
-                        <h3 class="font-bold text-lg">Hello!</h3>
-                        <p class="py-4">Press ESC key or click the button below to close</p>
+                        <h3 id="show-details-phone-name" class="font-bold text-lg"></h3>
+                        <div id="show-details-container" class="py-4">
+                        </div>
                         <div class="modal-action">
                             <form method="dialog">
                                 <!-- if there is a button in form, it will close the modal -->
